# krpc-gen-rs

./: Cargo.toml  README.md  build.rs  generated.rs
src/: main.rs
src/krpc_gen/: conversion.rs  lib.rs  original.rs  output.rs  parser.rs  writer.rs
templates/: service.rs.hbs  service.ts.hbs
