[package]
name = "krpc-gen-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "krpc_gen"
path = "src/krpc_gen/lib.rs"

[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
handlebars = "4.1.3"
convert_case = "0.4.0"
